--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+    <dimen name="large_font">32sp</dimen>
+    <dimen name="small_padding">6dp</dimen>
+    <dimen name="small_med_padding">10dp</dimen>
+    <dimen name="medium_font">20sp</dimen>
+    <dimen name="small_font">10sp</dimen>
 </resources>
