--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,74 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorRed">#ff0000</color>
+    <color name="colorBlue">#0000ff</color>
+    <color name="cardsPrimary">#97233F</color>
+    <color name="cardsSecondary">#ffc20e</color>
+    <color name="falconsPrimary">#a6192e</color>
+    <color name="falconsSecondary">#101820</color>
+    <color name="ravensPrimary">#241773</color>
+    <color name="ravensSecondary">#d0b240</color>
+    <color name="billsPrimary">#00338d</color>
+    <color name="billsSecondary">#C8102e</color>
+    <color name="panthersPrimary">#0085ca</color>
+    <color name="panthersSecondary">#101820</color>
+    <color name="bearsPrimary">#051C2C</color>
+    <color name="bearsSecondary">#DC4405</color>
+    <color name="brownsPrimary">#382F2D</color>
+    <color name="brownsSecondary">#EB3300</color>
+    <color name="bengalsPrimary">#FC4C02</color>
+    <color name="bengalsSecondary">#101820</color>
+    <color name="cowboysPrimary">#041E42</color>
+    <color name="cowboysSecondary">#869397</color>
+    <color name="broncosPrimary">#0C2340</color>
+    <color name="broncosSecondary">#FC4C02</color>
+    <color name="lionsPrimary">#0069B1</color>
+    <color name="lionsSecondary">#A2AAAD</color>
+    <color name="packersPrimary">#28443B</color>
+    <color name="packersSecondary">#FFC211</color>
+    <color name="texansPrimary">#091F2C</color>
+    <color name="texansSecondary">#46192E</color>
+    <color name="coltsPrimary">#003A70</color>
+    <color name="coltsSecondary">#A2AAAD</color>
+    <color name="jagsPrimary">#006073</color>
+    <color name="jagsSecondary">#D9A318</color>
+    <color name="chiefsPrimary">#C8102E</color>
+    <color name="chiefsSecondary">#FFB81C</color>
+    <color name="chargersPrimary">#0072CE</color>
+    <color name="chargersSecondary">#FFB81C</color>
+    <color name="ramsPrimary">#002244</color>
+    <color name="ramsSecondary">#866D4B</color>
+    <color name="dolphinsPrimary">#008E97</color>
+    <color name="dolphinsSecondary">#F58220</color>
+    <color name="vikingsPrimary">#4F2683</color>
+    <color name="vikingsSecondary">#FFC62F</color>
+    <color name="patsPrimary">#0C2340</color>
+    <color name="patsSecondary">#C8102E</color>
+    <color name="saintsPrimary">#D3BC8D</color>
+    <color name="saintsSecondary">#101820</color>
+    <color name="giantsPrimary">#001E62</color>
+    <color name="giantsSecondary">#A6192E</color>
+    <color name="jetsPrimary">#FFFFFF</color>
+    <color name="jetsSecondary">#2A433A</color>
+    <color name="raidersPrimary">#A5ACAF</color>
+    <color name="raidersSecondary">#101820</color>
+    <color name="eaglesPrimary">#004581</color>
+    <color name="eaglesSecondary">#D3A205</color>
+    <color name="steelersPrimary">#FFB81C</color>
+    <color name="steelersSecondary">#101820</color>
+    <color name="sanfranPrimary">#AA0000</color>
+    <color name="sanfranSecondary">#B3995E</color>
+    <color name="seahawksPrimary">#4DFF00</color>
+    <color name="seahawksSecondary">#001433</color>
+    <color name="bucanPrimary">#C42C20</color>
+    <color name="bucanSecondary">#FF7900</color>
+    <color name="titansPrimary">#4B92DB</color>
+    <color name="titansSecondary">#0C2340</color>
+    <color name="redskinsPrimary">#862633</color>
+    <color name="redskinsSecondary">#FFCD00</color>
+
+
+
+
 </resources>
