--- a/app/src/main/res/layout/activity_game_start.xml
+++ b/app/src/main/res/layout/activity_game_start.xml
@@ -7,75 +7,211 @@
     android:orientation="vertical"
     tools:context="com.example.android.footballgamerecorder.StartGame">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".75"
+        android:layout_margin="@dimen/small_padding">
+        <TextView
+            android:id="@+id/team_one_game_start_name_display"
+            android:layout_weight="3"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/team_name_here"
+            android:fontFamily="@font/freshman"
+            android:textSize="@dimen/large_font"
+            android:textColor="#000000"
+            android:textStyle="bold"
+            android:textAllCaps="true"/>
+        <Button
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:onClick="returnToTeamSelection"
+            android:layout_width="0dp"
+            android:layout_weight=".75"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:background="@drawable/border_black"
+            android:fontFamily="@font/freshman"
+            android:textColor="#66111111"
+            android:textSize="@dimen/xtra_small_font"
+            android:text="New Team"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/start_quarterback_display"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".25"
+        android:layout_marginRight="@dimen/small_padding"
+        android:layout_marginLeft="@dimen/small_padding">
+        <TextView
+            android:id="@+id/team_one_starting_qb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="@dimen/small_padding"
+            android:paddingEnd="@dimen/small_padding"
+            android:fontFamily="@font/freshman"
+            android:textSize="@dimen/small_font"
+            android:textColor="#000000"
+            android:text="Starting Quarterback: "/>
+        <TextView
+            android:id="@+id/team_one_passing_player_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/freshman"
+            android:textSize="@dimen/small_font"
+            android:text="Temporary Name Here" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/team_one_game_start_name_display"
-        android:layout_weight="2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:text="@string/team_name_here"
-        android:textSize="@dimen/large_font"
-        android:textStyle="bold" />
-    <Button
-        style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:layout_width="0dp"
-        android:layout_weight=".5"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_marginRight="@dimen/small_med_padding"
-        android:layout_marginLeft="@dimen/small_med_padding"
-        android:layout_marginBottom="@dimen/small_med_padding"
-        android:textColor="#66111111"
-        android:textStyle="bold"
-        android:textSize="@dimen/small_font"
-        android:text="New Team"/>
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/team_one_starting_qb"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Starting Quarterback: "/>
+        android:layout_height="0dp"
+        android:layout_weight="3">
     <ImageView
         android:id="@+id/team_one_game_start_logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
         />
-
     <TextView
-        android:id="@+id/team_one_passing_player_name"
+        android:id="@+id/team_one_score_display"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-
-    <TextView
-        android:id="@+id/team_two_game_start_name_display"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/team_name_here"
-        android:textSize="@dimen/large_font"
-        android:textStyle="bold"/>
+        android:gravity="center"
+        android:layout_gravity="center_horizontal"
+        android:fontFamily="@font/freshman"
+        android:text="SCORE"
+        android:textColor="#111111"
+        android:textSize="@dimen/larger_font"/>
+    </LinearLayout>
 
-
-    <TextView
-        android:id="@+id/team_two_starting_qb"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Starting Quarterback: "/>
-
-    <TextView
-        android:id="@+id/team_two_passing_player_name"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="0dp"
+        android:layout_weight=".75"
+        android:layout_margin="@dimen/small_padding">
+        <TextView
+            android:id="@+id/team_two_game_start_name_display"
+            android:layout_weight="3"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/team_name_here"
+            android:fontFamily="@font/freshman"
+            android:textSize="@dimen/large_font"
+            android:textColor="#000000"
+            android:textStyle="bold"
+            android:textAllCaps="true"/>
+        <Button
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:onClick="returnToTeamSelection"
+            android:layout_width="0dp"
+            android:layout_weight=".75"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:background="@drawable/border_black"
+            android:fontFamily="@font/freshman"
+            android:textColor="#66111111"
+            android:textSize="@dimen/xtra_small_font"
+            android:text="New Team"/>
+    </LinearLayout>
 
-    <ImageView
-        android:id="@+id/team_two_game_start_logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:id="@+id/start_quarterback2_display"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".25"
+        android:layout_marginRight="@dimen/small_padding"
+        android:layout_marginLeft="@dimen/small_padding">
+        <TextView
+            android:id="@+id/team_two_starting_qb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="@dimen/small_padding"
+            android:paddingEnd="@dimen/small_padding"
+            android:fontFamily="@font/freshman"
+            android:textSize="@dimen/small_font"
+            android:textColor="#000000"
+            android:text="Starting Quarterback: "/>
+        <TextView
+            android:id="@+id/team_two_passing_player_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/freshman"
+            android:textSize="@dimen/small_font"
+            android:text="Temporary Name Here"/>
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="3">
+        <ImageView
+            android:id="@+id/team_two_game_start_logo"
+            android:layout_width="140dp"
+            android:layout_height="140dp"/>
+        <TextView
+            android:id="@+id/team_two_score_display"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_gravity="center_horizontal"
+            android:fontFamily="@font/freshman"
+            android:text="SCORE"
+            android:textColor="#111111"
+            android:textSize="@dimen/larger_font"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".50"
+        android:layout_marginBottom="@dimen/small_padding"
+        android:gravity="center">
+        <Button
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:onClick="onClickStartHalf"
+            android:background="@drawable/border_black_nofade"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/small_padding"
+            android:layout_marginLeft="@dimen/small_padding"
+            android:text="start 1st half"
+            android:fontFamily="@font/freshman"
+            android:textSize="@dimen/xtra_small_font"
+            android:textStyle="bold"
+            android:textAllCaps="true"
+            android:textColor="#000000"
+            />
+        <Button
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:background="@drawable/border_black_nofade"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/small_padding"
+            android:layout_marginLeft="@dimen/small_padding"
+            android:text="HALFTIME"
+            android:fontFamily="@font/freshman"
+            android:textSize="@dimen/xtra_small_font"
+            android:textStyle="bold"
+            android:textAllCaps="true"
+            android:textColor="#000000"
+            />
+        <Button
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:background="@drawable/border_black_nofade"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/small_padding"
+            android:layout_marginLeft="@dimen/small_padding"
+            android:text="start 2nd half"
+            android:fontFamily="@font/freshman"
+            android:textSize="@dimen/xtra_small_font"
+            android:textStyle="bold"
+            android:textAllCaps="true"
+            android:textColor="#000000"
+            />
+    </LinearLayout>
+
 
 
 </LinearLayout>
