--- a/app/src/main/res/layout/activity_game_start.xml
+++ b/app/src/main/res/layout/activity_game_start.xml
@@ -291,7 +291,7 @@
         android:gravity="center">
         <Button
             style="@style/Widget.AppCompat.Button.Borderless.Colored"
-            android:onClick="onClickStartHalf"
+            android:onClick="onClickStartFirstHalf"
             android:background="@drawable/border_black_nofade"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -305,23 +305,11 @@
             android:textAllCaps="true"
             android:textColor="#000000"
             />
+
         <Button
             style="@style/Widget.AppCompat.Button.Borderless.Colored"
-            android:background="@drawable/border_black_nofade"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/small_padding"
-            android:layout_marginLeft="@dimen/small_padding"
-            android:padding="@dimen/small_padding"
-            android:text="HALFTIME"
-            android:fontFamily="@font/freshman"
-            android:textSize="@dimen/small_font"
-            android:textStyle="bold"
-            android:textAllCaps="true"
-            android:textColor="#000000"
-            />
-        <Button
-            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:onClick="onClickStartSecondHalf"
+            android:id="@+id/start_second_half"
             android:background="@drawable/border_black_nofade"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
